# aether-web-lite

./: .gitignore  README.md  cache_server_design.md  remaining_tasks.md  test_aa.js
aether-cache/: Cargo.toml  README.md  mailbox.db
aether-cache/src/: main.rs
aether-cache/src/gossip/: mod.rs  seen_cache.rs
aether-cache/src/mailbox/: dht_mailbox.rs  mod.rs
aether-cache/src/network/: messages.rs  mod.rs  ring_position.rs  signaling_client.rs  webrtc_peer.rs  wire.rs
aether-cache/src/storage/: mod.rs  sqlite_store.rs
aether-cache/src/tui/: app.rs  ui.rs
client/: next.config.ts  package-lock.json  package.json  server.ts
client-backup/: index.html  vite.config.ts
client-backup/public/: webrtc-test.html
client-backup/src/: constants.ts  index.css  types.ts
client/src/: main.ts
docs/: aether_security_proof.md  aether_web_lite_design.md  architecture_audit.md  implementation_guide.md  technical_specification.md  v2_master_tasks.md  ws1_nextjs_migration.md  ws3_ws4_stream_nat.md
docs/AETHER_Core/: AETHER_Core_Consensus_Annihilation.md  detailed_implementation.md  discovery_protocol_design.md  (+6 more)
server/: package-lock.json  package.json
sim/: aether_des  aether_des.cpp  aether_des.js  broadcast_veil_test.js  cache_100k_test.js  cache_seeding_test.js  dandelion_test.js  e2e_latency_test.js  gossip_encrypted_test.js  k_anonymous_zone_test.js  mega_scale_test.js  mesh_sim.js  notification_pull_test.js  stem_bandwidth_test.js
simulation/: package-lock.json  package.json  simulate_wn_sea.cjs
web/: next.config.ts  package-lock.json  package.json  server.ts
(+127 files in other folders)
