[package]
name = "aether-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# WebRTC
webrtc = "0.10"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }

# Crypto (Browser parity)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# UI/TUI
ratatui = "0.26"
crossterm = "0.27"

# Utils
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
